fix: wrap

--- a/index.css
+++ b/index.css
@@ -467,6 +467,7 @@ a {
   display: flex;
   justify-content: start;
   align-items: center;
+  flex-wrap: wrap;
   gap: 20px;
 
   padding-bottom: 30px;
